--- a/.env.testing
+++ b/.env.testing
@@ -9,8 +9,8 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=laravel_resource_api_test
-DB_USERNAME=root
-DB_PASSWORD=
+DB_USERNAME=ravuthz
+DB_PASSWORD=123123
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
